iniciado o rodape, e criado algumas modificações no menu

--- a/loja-moveis/home.html
+++ b/loja-moveis/home.html
@@ -15,38 +15,39 @@
     <!-- header inicio -->
     <header class="header">
       <a href="home.html" class="logo"><i class="fas fa-lightbulb"></i>mobiliária</a>
+
       <form action="" class="search-form">
         <input type="search" placeholder="Buscar no site..." id="search-box">
-        <label for="search-box" class="fas fa-search"></label>
+        <label for="search-box" class="fas fa-search">→</label>
       </form>
 
       <div class="icons">
-        <div id="menu-btn" class="fas fa-bars"></div>
-        <div id="search-btn" class="fas fa-search"></div>
-        <div id="cart-btn" class="fas fa-shopping-cart"></div>
-        <div id="login-btn" class="fas fa-user"></div>
+        <div id="menu-btn" class="fas fa-bars">Menu</div>
+        <div id="search-btn" class="fas fa-search">procurar</div>
+        <div id="cart-btn" class="fas fa-shopping-cart">compras</div>
+        <div id="login-btn" class="fas fa-user">Entrar</div>
       </div>
     </header>
     <!-- header fim -->
 
     <!-- btn fechar -->
-    <div id="closer" class="fas fa-times"></div>
+    <div id="closer" class="fas fa-times">x</div>
     
     <!-- menu inicio -->
     <nav class="navbar">
       <a href="home.html">home</a>
-      <a href="loja.html">loja</a>
-      <a href="sobre.html">sobre</a>
-      <a href="equipe.html">equipe</a>
-      <a href="diario.html">diario</a>
-      <a href="contato.html">contato</a>
+      <a href="shop.html">loja</a>
+      <a href="about.html">sobre</a>
+      <a href="team.html">equipe</a>
+      <a href="blog.html">diario</a>
+      <a href="contact.html">contato</a>
     </nav>
     <!-- menu fim -->
 
     <!-- carrinho de compras inicio -->
     <div class="shopping-cart">
       <div class="box">
-        <i class="fas fa-times"></i>
+        <i class="fas fa-times">x</i>
         <img src="./image/cart-img-1.jpg" alt="">
         <div class="content">
           <h3>mobília modelo</h3>
@@ -56,7 +57,7 @@
         </div>
       </div>
       <div class="box">
-        <i class="fas fa-times"></i>
+        <i class="fas fa-times">x</i>
         <img src="./image/cart-img-2.jpg" alt="">
         <div class="content">
           <h3>mobília modelo</h3>
@@ -66,7 +67,7 @@
         </div>
       </div>
       <div class="box">
-        <i class="fas fa-times"></i>
+        <i class="fas fa-times">x</i>
         <img src="./image/cart-img-3.jpg" alt="">
         <div class="content">
           <h3>mobília modelo</h3>
@@ -76,7 +77,7 @@
         </div>
       </div>
       <div class="box">
-        <i class="fas fa-times"></i>
+        <i class="fas fa-times">x</i>
         <img src="./image/cart-img-4.jpg" alt="">
         <div class="content">
           <h3>mobília modelo</h3>
@@ -85,12 +86,12 @@
           <span class="price">R$ 140.99</span>
         </div>
       </div>
-      <h3 class="total">total: <span>R$ 560</span></h3>
+      <h3 class="total">total: <span>R$ 560,00</span></h3>
       <a href="#" class="btn">minhas compras</a>
     </div>
     <!-- carrinho de compras fim -->
 
-    <!-- login inicio -->
+    <!-- form-login inicio -->
     <div class="login-form">
       <form action="">
         <h3>entrar</h3>
@@ -98,14 +99,14 @@
         <input type="password" placeholder="Senha" class="box">
         <div class="remember">
           <input type="checkbox" name="" id="remember-me">
-          <label for="remember-me">lembre de mim</label>
+          <label for="remember-me">lembrar de mim</label>
         </div>
         <input type="submit" value="Entrar agora" class="btn">
         <p>esqueceu a senha? <a href="#">click aqui</a></p>
         <p>não tem conta? <a href="#">criar conta</a></p>
       </form>
     </div>
-    <!-- login fim -->
+    <!-- form-login fim -->
 
     <!-- rodape inicio -->
     <section class="footer">
@@ -113,11 +114,18 @@
         <div class="box">
           <h3>Links diretos</h3>
           <a href="home.html"><i class="fas fa-arrow-right"></i>home</a>
-          <a href="loja.html"><i class="fas fa-arrow-right"></i>loja</a>
-          <a href="sobre.html"><i class="fas fa-arrow-right"></i>sobre</a>
-          <a href="equipe.html"><i class="fas fa-arrow-right"></i>equipe</a>
-          <a href="diario.html"><i class="fas fa-arrow-right"></i>diario</a>
-          <a href="contato.html"><i class="fas fa-arrow-right"></i>contato</a>
+          <a href="shop.html"><i class="fas fa-arrow-right"></i>loja</a>
+          <a href="about.html"><i class="fas fa-arrow-right"></i>sobre</a>
+          <a href="team.html"><i class="fas fa-arrow-right"></i>equipe</a>
+          <a href="blog.html"><i class="fas fa-arrow-right"></i>diario</a>
+          <a href="contact.html"><i class="fas fa-arrow-right"></i>contato</a>
+        </div>
+        <div class="box">
+          <h3>Links extras</h3>
+          <a href="#"><i class="fas fa-arrow-right"></i>meus pedidos</a>
+          <a href="#"><i class="fas fa-arrow-right"></i>minha lista lista</a>
+          <a href="#"><i class="fas fa-arrow-right"></i>minha conta</a>
+          <a href="#"><i class="fas fa-arrow-right"></i>meus favoritos</a>
         </div>
         <div class="box">
           <h3>midias sociais</h3>
